--- a/alarm/alarm.config
+++ b/alarm/alarm.config
@@ -3,7 +3,7 @@ alarmTime=700
 debug=1
 
 [weather] #from API
-city="Needham"
+city="Boston"
 humid=1
 precip=1 #or should this be rain, snow, etc? depends on API
 wind=1
