--- a/alarm/alarm.config
+++ b/alarm/alarm.config
@@ -1,16 +1,16 @@
 [main]
-alarmTime=700
 debug=1
+#alarmTime would be cool if could work with cron
 
-[weather] #from API
+[weather] #from API, OpenWeather currently
 city="Boston"
 humid=1
 precip=1 #or should this be rain, snow, etc? depends on API
 wind=1
 
-[news] #from rss feed
+[news] #from rss feed, NPR currently
 newsSourceURL=http://www.npr.org/rss/rss.php?id=1001
-newsSourceTitle= NPR
-numArticles=3
-descriptions=0 #eg for reddit this is false
+newsSourceTitle=NPR
+numArticles=3 #how many headlines do you want?
+#descriptions=0 #have not tried this but I doubt it would be worth it
 
